// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Option renders a default multi-select state 1`] = `
<div>
  <div
    aria-checked="false"
    class="fui-Option"
    id="fluent-option_r_9_"
    role="menuitemcheckbox"
  >
    <span
      aria-hidden="true"
      class="fui-Option__checkIcon"
    />
    Default Option
  </div>
</div>
`;

exports[`Option renders a default single-select state 1`] = `
<div>
  <div
    aria-selected="false"
    class="fui-Option"
    id="fluent-option_r_7_"
    role="option"
  >
    <span
      aria-hidden="true"
      class="fui-Option__checkIcon"
    >
      <svg
        aria-hidden="true"
        class=""
        fill="currentColor"
        height="1em"
        viewBox="0 0 20 20"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7.03 13.9 3.56 10a.75.75 0 0 0-1.12 1l4 4.5c.29.32.79.34 1.09.03l10.5-10.5a.75.75 0 0 0-1.06-1.06l-9.94 9.94Z"
          fill="currentColor"
        />
      </svg>
    </span>
    Default Option
  </div>
</div>
`;

exports[`Option renders a selected multi-select state 1`] = `
<div>
  <div
    aria-checked="true"
    class="fui-Option"
    id="fluent-option_r_a_"
    role="menuitemcheckbox"
  >
    <span
      aria-hidden="true"
      class="fui-Option__checkIcon"
    >
      <svg
        aria-hidden="true"
        class=""
        fill="currentColor"
        height="1em"
        viewBox="0 0 20 20"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7.03 13.9 3.56 10a.75.75 0 0 0-1.12 1l4 4.5c.29.32.79.34 1.09.03l10.5-10.5a.75.75 0 0 0-1.06-1.06l-9.94 9.94Z"
          fill="currentColor"
        />
      </svg>
    </span>
    Default Option
  </div>
</div>
`;
